--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# random
+._*
+DS*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -5,6 +9,7 @@ __pycache__/
 
 # C extensions
 *.so
+*.out
 
 # Distribution / packaging
 .Python
